# PathTracer-CLion-Tutorial

./: .gitignore  CMakeLists.txt  README.md
doc/: InitGPUDataBuffers.md  问题.md
src/: Main.cpp
src/core/: Camera.cpp  Camera.h  Config.h  EnvironmentMap.cpp  EnvironmentMap.h  Material.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/loaders/: BlendLoader.cpp  BlendLoader.h  GLTFLoader.cpp  GLTFLoader.h  Loader.cpp  Loader.h
src/math/: Mat4.h  MathUtils.h  Vec2.h  Vec3.h  Vec4.h
src/shaders/: output.glsl  preview.glsl  tile.glsl  tonemap.glsl
src/shaders/common/: anyhit.glsl  closest_hit.glsl  disney.glsl  envmap.glsl  globals.glsl  intersection.glsl  lambert.glsl  pathtrace.glsl  sampling.glsl  uniforms.glsl  vertex.glsl
